--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "express": "^4.21.1",
     "mongoose": "^8.8.3",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^18.2.0",
-    "react-reveal": "^1.2.2",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "web-vitals": "^2.1.4"
